Add a Result Button.
You should add a result button for storing the previous result.
This is to be done as whenever you input a digit after your answer it concatenates the result and the digit enter.
To overcome this you can clear the result as soon as the user enters a digit after the result is been displayed and if an operator is entered continue with calculation.
The Result button holds the last result even after the user enters a digit.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="grid-item0" onclick='displayClicked("0")'>0</div>
                 <div class="grid-item" onclick='displayClicked(".")'>.</div>
                 <div class="grid-itemequal" onclick='displayresult()'>=</div>
+                <div class="grid-itemResult" onclick='displayresult()'>=</div>
             </div>
             <div class="side-functions">
                 <div class="grid-item" onclick='displayClicked("sin")'>sin</div>
